; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers/extr_udev_input.c_udev_mouse_get_pointer_y.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers/extr_udev_input.c_udev_mouse_get_pointer_y.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, double }
%struct.TYPE_5__ = type { double, double, double }

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (%struct.TYPE_6__*, i32)* @udev_mouse_get_pointer_y to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @udev_mouse_get_pointer_y(%struct.TYPE_6__* %0, i32 %1) #0 {
  %3 = alloca double, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__, align 8
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  %9 = alloca double, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32 %1, i32* %5, align 4
  %10 = call i32 @video_driver_get_viewport_info(%struct.TYPE_5__* %6)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store double 0.000000e+00, double* %3, align 8
  br label %73

13:                                               ; preds = %2
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = icmp slt i32 %16, %19
  br i1 %20, label %21, label %35

21:                                               ; preds = %13
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = sitofp i32 %24 to double
  store double %25, double* %7, align 8
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = sub nsw i32 %28, %31
  %33 = add nsw i32 %32, 1
  %34 = sitofp i32 %33 to double
  store double %34, double* %8, align 8
  br label %47

35:                                               ; preds = %13
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %37 = load double, double* %36, align 8
  store double %37, double* %7, align 8
  %38 = load i32, i32* %5, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %43

40:                                               ; preds = %35
  %41 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 1
  %42 = load double, double* %41, align 8
  store double %42, double* %8, align 8
  br label %46

43:                                               ; preds = %35
  %44 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 2
  %45 = load double, double* %44, align 8
  store double %45, double* %8, align 8
  br label %46

46:                                               ; preds = %43, %40
  br label %47

47:                                               ; preds = %46, %21
  %48 = load double, double* %8, align 8
  %49 = fdiv double 6.553500e+04, %48
  %50 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %51 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %50, i32 0, i32 2
  %52 = load double, double* %51, align 8
  %53 = load double, double* %7, align 8
  %54 = fsub double %52, %53
  %55 = fmul double %49, %54
  %56 = fadd double -3.276700e+04, %55
  store double %56, double* %9, align 8
  %57 = load double, double* %9, align 8
  %58 = fcmp olt double %57, 0.000000e+00
  %59 = zext i1 %58 to i64
  %60 = select i1 %58, double -5.000000e-01, double 5.000000e-01
  %61 = load double, double* %9, align 8
  %62 = fadd double %61, %60
  store double %62, double* %9, align 8
  %63 = load double, double* %9, align 8
  %64 = fcmp olt double %63, -3.276700e+04
  br i1 %64, label %65, label %66

65:                                               ; preds = %47
  store double -3.276700e+04, double* %9, align 8
  br label %71

66:                                               ; preds = %47
  %67 = load double, double* %9, align 8
  %68 = fcmp ogt double %67, 3.276700e+04
  br i1 %68, label %69, label %70

69:                                               ; preds = %66
  store double 3.276700e+04, double* %9, align 8
  br label %70

70:                                               ; preds = %69, %66
  br label %71

71:                                               ; preds = %70, %65
  %72 = load double, double* %9, align 8
  store double %72, double* %3, align 8
  br label %73

73:                                               ; preds = %71, %12
  %74 = load double, double* %3, align 8
  ret double %74
}

declare dso_local i32 @video_driver_get_viewport_info(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
